--- a/portifolio/package.json
+++ b/portifolio/package.json
@@ -20,7 +20,8 @@
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
